
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_3__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {int* unsigned_integer; } ;
struct TYPE_6__ {TYPE_1__ target; } ;
struct TYPE_7__ {TYPE_2__ value; } ;
typedef TYPE_3__ rarch_setting_t ;


 int MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_DM_HM ;
 int MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_DM_HM_AM_PM ;
 int MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_HM ;
 int MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_HMS ;
 int MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_HMS_AM_PM ;
 int MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_HM_AM_PM ;
 int MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_MDYYYY ;
 int MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_MDYYYY_AM_PM ;
 int MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_MD_HM ;
 int MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_MD_HM_AM_PM ;
 int MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_YMD_HM ;
 int MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_YMD_HMS ;
 int MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_YMD_HMS_AM_PM ;
 int MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_YMD_HM_AM_PM ;
 int msg_hash_to_str (int ) ;
 int strlcpy (char*,int ,size_t) ;

__attribute__((used)) static void setting_get_string_representation_uint_menu_timedate_style(
   rarch_setting_t *setting,
   char *s, size_t len)
{
   if (!setting)
      return;

   switch (*setting->value.target.unsigned_integer)
   {
      case 130:
         strlcpy(s, msg_hash_to_str(
            MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_YMD_HMS), len);
         break;
      case 131:
         strlcpy(s, msg_hash_to_str(
            MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_YMD_HM), len);
         break;
      case 135:
         strlcpy(s,
            msg_hash_to_str(
               MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_MDYYYY), len);
         break;
      case 138:
         strlcpy(s,
            msg_hash_to_str(
               MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_HMS), len);
         break;
      case 139:
         strlcpy(s,
            msg_hash_to_str(
               MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_HM), len);
         break;
      case 141:
         strlcpy(s,
            msg_hash_to_str(
               MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_DM_HM), len);
         break;
      case 133:
         strlcpy(s,
            msg_hash_to_str(
               MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_MD_HM), len);
         break;
      case 129:
         strlcpy(s,
            msg_hash_to_str(
               MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_YMD_HMS_AM_PM), len);
         break;
      case 128:
         strlcpy(s,
            msg_hash_to_str(
               MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_YMD_HM_AM_PM), len);
         break;
      case 134:
         strlcpy(s,
            msg_hash_to_str(
               MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_MDYYYY_AM_PM), len);
         break;
      case 137:
         strlcpy(s,
            msg_hash_to_str(
               MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_HMS_AM_PM), len);
         break;
      case 136:
         strlcpy(s,
            msg_hash_to_str(
               MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_HM_AM_PM), len);
         break;
      case 140:
         strlcpy(s,
            msg_hash_to_str(
               MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_DM_HM_AM_PM), len);
         break;
      case 132:
         strlcpy(s,
            msg_hash_to_str(
               MENU_ENUM_LABEL_VALUE_TIMEDATE_STYLE_MD_HM_AM_PM), len);
         break;
   }
}
